--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@next/font": "^13.4.4",
     "framer-motion": "^10.18.0",
     "jquery": "^3.7.1",
-    "next": "13.4.3",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
