--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "framer-motion": "^10.18.0",
     "jquery": "^3.7.1",
     "next": "^13.5.6",
+    "radium": "^0.26.2",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
